# DeepResearchAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: bad_cases.jsonl  bad_cases_llm.jsonl  eval_baseline.json  eval_set_deterministic.jsonl  finance_metric_normalization.json
data/demo/: g3_showcase.json
data/mock_data/: sources.json  structured_finance.json
docs/: architecture.md  deployment.md  evaluation.md  interview_qa.md  postgres_schema.sql  provider_integration.md
prompts/: critic.md  extractor.md  judge.md  planner.md  reporter.md
scripts/: assemble_citation_support_3s.py  audit_gold.py  build_site.py  combine_golden_rounds.py  compare_golden_v11.py  dev_server.py  record_gold_appendix.py  record_structured_data_fixture.py  refill_gold.py  run_checkpoint_demo.py  run_citation_support_3s.py  run_demo.py  run_eval.py  run_golden_round.py  sync_g3_showcase.py
src/deepresearch_agent/: __init__.py  citations.py  cli.py  llm_config.py  schemas.py  settings.py
tests/evaluation/: __init__.py  test_harness.py
tests/integration/: test_api_contract.py  test_checkpoint.py  test_dev_server.py  test_langgraph_migration.py  test_retry_attribution.py  test_search_provider_boundary.py  test_tavily_provider_workflow.py  test_workflow.py
tests/unit/: test_build_site.py  test_citation_support_sampling.py  test_citations.py  test_critic.py  test_demo_deployment.py  test_evaluator.py  test_finance_critic_matrix.py  test_gold_audit.py  test_judge.py  (+10 more)
ui/: app.py
(+52 files in other folders)
